# thermostat

./: .gitmodules  CMakeLists.txt  README.md
example/: main.tex  mie.json  settings.json  srk.json
example/DEV/: ARKR_PVT.DEV  ARKR_VLE.DEV
include/: properties.hpp  psrk.hpp
include/thermostat/: properties.hpp  psrk.hpp  stat_algorithms.hpp  stat_types.hpp
python/: table_tex.py
src/: thermostat.cxx
